--- a/src/app/book-list.component.html
+++ b/src/app/book-list.component.html
@@ -1,4 +1,5 @@
 <div style="flex:1">
+    <h1>All Books</h1> 
     <ul style="list-style:none;">
         <li myHighlight
             *ngFor="let book of books; let i = index;" 
